--- a/01-emmet/16-challenge.html
+++ b/01-emmet/16-challenge.html
@@ -1,7 +1,13 @@
 <h1> Challenge: Emmet </h1>
 <hr>
 <h3>Example:</h3>
-header#header>nav.navbar.navbar-inverse.navbar-fixed-top>div.contaier>div.navbar-header>button[type="button"].navbar-toggle[data-toggle="collapse"][data-target="navbar-collapse"]>(span.sr-only{Toggle navigation}+span.icon-bar*3)^a.navbar-collapse[href="index.php"]>img[src="imgs/logo.png"]^^div.collapse.navbar-collapse.navbar-right>ul.nav.navbar-nav>li>a.link[href="index.html"]{Inicio}^li.active.link>a.link[href="login.html"]{Ingresar}^li>a.link[href="registro.html"]{Registrarse}^li>a.link[href="contacto.html"]{Contacto}
+header#header>nav.navbar.navbar-inverse.navbar-fixed-top>div.contaier>div.navbar-header>button[type="button"].navbar-toggle[data-toggle="collapse"][data-target=".navbar-collapse"]>(span.sr-only{Toggle navigation}+span.icon-bar*3)^a.navbar-collapse[href="index.php"]>img[src="imgs/logo.png"]^^div.collapse.navbar-collapse.navbar-right>ul.nav.navbar-nav>li>a.link[href="index.html"]{Inicio}^li.active.link>a.link[href="login.html"]{Ingresar}^li>a.link[href="registro.html"]{Registrarse}^li>a.link[href="contacto.html"]{Contacto}
+
+
+<h3>Teacher Solve</h3>
+header#header>nav.navbar.navbar-inverse.navbar-fixed-top>div.container>(div.navbar-header>button.navbar-toggle[type=button data-toggle=collapse data-target=.navbar-collapse]>span.sr-only{Toggle navigation}+span.icon-bar*3^a.navbar-brand[href=index.php]>img[src=imgs/logo.png])+(div.collapse.navbar-collapse.navbar-right>ul.nav.navbar-nav>(li>a.link[href=index.html]{Inicio})+(li>a.active.link[href=login.html]{Ingresar})+(li>a.link[href=registro.html]{Registrarse})+(li>a.link[href=contacto.html]{Contacto}))
+
+
 
 <h3>Result:</h3>
 <xmp>
