--- a/03-html5/05-input.html
+++ b/03-html5/05-input.html
@@ -13,12 +13,16 @@
     <output id="hex"></output>
     <!--  -->
     <h3>Type Date:</h3>
-    <input type="date" required>
+    <input type="week" required>
     <!--  -->
-    <h3>Type Email:</h3>
-    <input type="email" required>
-    <br>
-    <br>
+    <h3>Type Number (1-100):</h3>
+    <input type="number" min="1" max="100" required>
+    <!--  -->
+    <h3>Type Range:</h3>
+    <input type="range" min="0" max="100" step="10" oninput="perc.value=this.value+'%'" required>
+    <output id="perc"></output>
+    <!--  -->
+    <br><br>
     <button>Send Form</button>
     <!--  -->
     </form>
