--- a/04-css2.1/06-inheritance.html
+++ b/04-css2.1/06-inheritance.html
@@ -1,22 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Inheritance</title>
-
-    <style type="text/css">
-        body {color: blue;}
+    <style>
+      section {
+        color: white;
+        background-color: grey;
+        margin: 50px auto;
+        padding: 10px;
+        width: 400px;
+      }
     </style>
-
-</head>
-<body>
-    <h1>Inheritance Example 1</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut consectetur voluptas <br> laudantium temporibus ratione. Quam in quisquam ab delectus quod.</p>
-    
-    <div><a href="">Inheritance<span>Inheritance</span><span>Inheritance</span><span>Inheritance</span><span>Inheritance</span><span>Inheritance</span></a><a href="">Inheritance<span>Inheritance</span><span>Inheritance</span><span>Inheritance</span><span>Inheritance</span><span>Inheritance</span></a><a href="">Inheritance<span>Inheritance</span><span>Inheritance</span><span>Inheritance</span><span>Inheritance</span><span>Inheritance</span></a></div>
-    <div><a href="">Inheritance<span>Inheritance</span><span>Inheritance</span><span>Inheritance</span><span>Inheritance</span><span>Inheritance</span></a><a href="">Inheritance<span>Inheritance</span><span>Inheritance</span><span>Inheritance</span><span>Inheritance</span><span>Inheritance</span></a><a href="">Inheritance<span>Inheritance</span><span>Inheritance</span><span>Inheritance</span><span>Inheritance</span><span>Inheritance</span></a></div>
-    <div><a href="">Inheritance<span>Inheritance</span><span>Inheritance</span><span>Inheritance</span><span>Inheritance</span><span>Inheritance</span></a><a href="">Inheritance<span>Inheritance</span><span>Inheritance</span><span>Inheritance</span><span>Inheritance</span><span>Inheritance</span></a><a href="">Inheritance<span>Inheritance</span><span>Inheritance</span><span>Inheritance</span><span>Inheritance</span><span>Inheritance</span></a></div>
-</body>
+  </head>
+  <body>
+    <section>
+      <article>
+        <h2>Inheritance</h2>
+        <p>
+          <strong>Lorem ipsum dolor</strong>, sit amet consectetur adipisicing
+          elit. Laborum amet soluta adipisci perspiciatis. Omnis doloremque
+          tenetur molestiae nobis quae voluptatem, aspernatur rerum odio
+          accusamus beatae a culpa! Eligendi, blanditiis? Labore vitae molestias
+          in hic pariatur voluptate quis ratione odio ipsa.
+        </p>
+        <p>
+          <strong>Lorem ipsum dolor</strong>, sit amet consectetur adipisicing
+          elit. Laborum amet soluta adipisci perspiciatis. Omnis doloremque
+          tenetur molestiae nobis quae voluptatem, aspernatur rerum odio
+          accusamus beatae a culpa! Eligendi, blanditiis? Labore vitae molestias
+          in hic pariatur voluptate quis ratione odio ipsa.
+        </p>
+        <p>
+          <strong>Lorem ipsum dolor</strong>, sit amet consectetur adipisicing
+          elit. Laborum amet soluta adipisci perspiciatis. Omnis doloremque
+          tenetur molestiae nobis quae voluptatem, aspernatur rerum odio
+          accusamus beatae a culpa! Eligendi, blanditiis? Labore vitae molestias
+          in hic pariatur voluptate quis ratione odio ipsa.
+        </p>
+      </article>
+    </section>
+  </body>
 </html>
