--- a/04-css2.1/07-relative-units.html
+++ b/04-css2.1/07-relative-units.html
@@ -1,40 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Relative Units</title>
-    <style type="text/css">
-    
-        /* 
-            em: (No confundir con la etiqueta <em> de HTML) relativa respecto del tamaño de letra
-        empleado. Aunque no es una definición exacta, el valor de 1em se puede aproximar por la
-        anchura de la letra M ("eme mayúscula") del tipo y tamaño de letra que se esté utilizando.
-
-            ex: Relativa respecto de la altura de la letra x ("equis minúscula") del tipo y tamaño de letra que
-        se esté utilizando.
-
-        px: (píxel) relativa respecto de la resolución de la pantalla del usuario
-        
-        */
-
-        body {
-            font-size: 10px;
-            background-color: blueviolet;
-        }
-
-        h1 {
-            font-size: 2.5em;
-            background-color: rgb(66, 0, 128);
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        }
+    <style>
+      h2.px {
+        font-size: 16px;
+      }
+      h2.em {
+        font-size: 2em;
+      }
+      h2.ex {
+        font-size: 2ex;
+      }
     </style>
-</head>
-
-<body>
+  </head>
+  <body>
     <h1>Relative Units</h1>
-</body>
-
+    <h2 class="px">Pixel: 16px</h2>
+    <h2 class="em">Em: 2em</h2>
+    <h2 class="ex">Ex: 2ex</h2>
+  </body>
 </html>
