--- a/04-css2.1/08-absolute-units.html
+++ b/04-css2.1/08-absolute-units.html
@@ -1,27 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Absolute Units</title>
-    <link rel="stylesheet" href="/04-css2.1/css/absolute-units.css">
-</head>
-<body>
-     
-    <!--
-        in: del inglés "inches", pulgadas (1 pulgada son 2.54 centímetros)
-        cm: centímetros
-        mm: milímetros
-        pt: puntos (1 punto equivale a 1 pulgada/72, es decir, unos 0.35 milímetros)
-        pc: picas (1 pica equivale a 12 puntos, es decir, unos 4.23 milímetros) 
-    -->
+    <style>
+      h2.in {
+        font-size: 2in;
+      }
+      h2.cm {
+        font-size: 2cm;
+      }
+      h2.mm {
+        font-size: 2mm;
+      }
+      h2.pc {
+        font-size: 2pc;
+      }
+      h2.pt {
+        font-size: 2pt;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>Absolute Units</h1>
 
-    <h1>Absolute Units</h1> <br>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto voluptate eos voluptatem! Sapiente tenetur maxime odit ad voluptate blanditiis! Laborum!</p> <br>
-    <a href="#">Link</a> 
-    <br> <br>
-    <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae quibusdam fugit at ullam laboriosam! Saepe exercitationem voluptas repellendus unde placeat.</span>
-
-</body>
+    <h2 class="in">Inch: 2in</h2>
+    <h2 class="cm">Centimeter: 2cm</h2>
+    <h2 class="mm">Millimeter: 2mm</h2>
+    <h2 class="pc">Pica: 2pc</h2>
+    <h2 class="pt">Point: 2pt</h2>
+  </body>
 </html>
