--- a/04-css2.1/51-challenge.html
+++ b/04-css2.1/51-challenge.html
@@ -11,7 +11,11 @@
             /* Tipo de Letra */
         * {font-family: Arial, Helvetica, sans-serif;}
             /* Fondo */
-        body {background-color: rgb(22, 160, 84);}
+        body {
+            background-color: rgb(22, 160, 84);
+            border: 8px solid white;            
+            margin: 0;
+            }
 
             /* Sección Main */
         main {
