--- a/04-css2.1/51-challenge.html
+++ b/04-css2.1/51-challenge.html
@@ -140,9 +140,9 @@
         }
         section.box1 div.principal div.lata {background-position: -90px -200px;}
 
-        section.box1 div.principal a.hov1:hover {color: rgb(22, 160, 84);}
-        section.box1 div.principal a.hov2:hover {color: rgb(22, 160, 84);}
-        section.box1 div.principal a.hov3:hover {color: rgb(22, 160, 84);}
+        section.box1 div.principal:hover a.hov1{color: rgb(22, 160, 84);}
+        section.box1 div.principal:hover a.hov2{color: rgb(22, 160, 84);}
+        section.box1 div.principal:hover a.hov3{color: rgb(22, 160, 84);}
 
         /* Sección del Footer con NavBar */
         section.boxfooter {
