--- a/05-css3/index.html
+++ b/05-css3/index.html
@@ -37,6 +37,7 @@
                 <li><a href="01-selectors.html">1. Selectors</a></li>
                 <li><a href="02-border-radius.html">2. Border Radius</a></li>
                 <li><a href="03-box-shadows.html">3. Box Shadows</a></li>
+                <li><a href="04-challenge-shadows.html">3. Box Shadows</a></li>
             </menu>
         </main>
     </body>
