--- a/05-css3/01-selectors.html
+++ b/05-css3/01-selectors.html
@@ -82,7 +82,7 @@
     </head>
     <body>
         <main>
-            <h1>New Selectors</h1>
+            <h1> <span><a href="index.html">&larr;</a></span> New Selectors</h1>
             <h3>li:first-of-type | li:last-of-type | li:nth-child(3)</h3>
             <ul class="ul1">
                 <li>Python</li>
