--- a/05-css3/04-challenge-shadows.html
+++ b/05-css3/04-challenge-shadows.html
@@ -720,7 +720,7 @@
     </head>
     <body>
         <main>
-            <h1>Challenge Shadows</h1>
+            <h1> <span><a href="index.html">&larr;</a></span> Challenge Shadows</h1>
             <section class="frame">
                 <div class="light">
 
