--- a/05-css3/index.html
+++ b/05-css3/index.html
@@ -10,7 +10,7 @@
             menu {
                 padding-left: 0;
                 margin: 40px auto;
-                width: 200px;
+                width: 240px;
             }
             menu li {
                 list-style: none;
@@ -32,12 +32,18 @@
     </head>
     <body>
         <main>
-            <h1>Menu (Files)</h1>
+            <h1> Menu (Files)</h1>
             <menu>
                 <li><a href="01-selectors.html">1. Selectors</a></li>
                 <li><a href="02-border-radius.html">2. Border Radius</a></li>
                 <li><a href="03-box-shadows.html">3. Box Shadows</a></li>
-                <li><a href="04-challenge-shadows.html">3. Box Shadows</a></li>
+                <li><a href="04-challenge-shadows.html">4. Challenge Shadows</a></li>
+                <li><a href="05-border-image.html">5. Border Image</a></li>
+                <li><a href="06-bg-size.html">6. Backgroud Size</a></li>
+                <li><a href="07-bg-multiples.html">7. Backgroud Multiples</a></li>
+                <li><a href="08-bg-gradient.html">8. Backgroud Gardient</a></li>
+                <li><a href="09-text-shadows.html">9. Text Shadows</a></li>
+                <li><a href="10-web-fonts.html">10. Web Fonts</a></li>
             </menu>
         </main>
     </body>
