--- a/05-css3/index.html
+++ b/05-css3/index.html
@@ -44,6 +44,9 @@
                 <li><a href="08-bg-gradient.html">8. Backgroud Gardient</a></li>
                 <li><a href="09-text-shadows.html">9. Text Shadows</a></li>
                 <li><a href="10-web-fonts.html">10. Web Fonts</a></li>
+                <li><a href="11-variables.html">11. Variables</a></li>
+                <li><a href="12-transformations.html">12. Transformations</a></li>
+                <li><a href="13-transitions.html">13. Transitions</a></li>
             </menu>
         </main>
     </body>
