Animations, Media Queries & Parallax

--- a/05-css3/index.html
+++ b/05-css3/index.html
@@ -18,15 +18,17 @@
             }
             menu li a:link,
             menu li a:visited {
-                background-color: #5d745a;
-                border-left: 10px solid #3d483b;
+                background-color: #00ac78;
+                border-left: 10px solid #027452;
                 color: #fff;
                 display: block;
                 padding: 10px;
                 text-decoration: none;
+                transition: all 0.2s ease-in;
             }
             menu li a:hover {
-                border-left: 10px solid #2a3129;
+                border-left: 10px solid #027452;
+                transform: scale(1.1);
             }
         </style>
     </head>
@@ -47,6 +49,13 @@
                 <li><a href="11-variables.html">11. Variables</a></li>
                 <li><a href="12-transformations.html">12. Transformations</a></li>
                 <li><a href="13-transitions.html">13. Transitions</a></li>
+                <li><a href="14-animations.html">14. Animations</a></li>
+                <li><a href="15-media-queries.html" target="_blank">15. Media
+                        Queries</a></li>
+                <li><a href="16-challenge-responsive.html" target="_blank">16.
+                        Challenge Responsive</a></li>
+                <li><a href="17-steps.html">17. Steps</a></li>
+                <li><a href="18-parallax.html">18. Parallax</a></li>
             </menu>
         </main>
     </body>
