--- a/05-css3/18-parallax.html
+++ b/05-css3/18-parallax.html
@@ -79,7 +79,7 @@
     </head>
     <body>
         <main>
-            <h1> <span><a href="index.html">&larr;</a></span>!Parallax</h1>
+            <h1> <span><a href="index.html">&larr;</a></span>Parallax</h1>
             <section class="parallax">
                 <div class="layer8"></div>
                 <div class="layer7"></div>
