--- a/05-css3/index.html
+++ b/05-css3/index.html
@@ -50,12 +50,12 @@
                 <li><a href="12-transformations.html">12. Transformations</a></li>
                 <li><a href="13-transitions.html">13. Transitions</a></li>
                 <li><a href="14-animations.html">14. Animations</a></li>
-                <li><a href="15-media-queries.html" target="_blank">15. Media
-                        Queries</a></li>
-                <li><a href="16-challenge-responsive.html" target="_blank">16.
-                        Challenge Responsive</a></li>
+                <li><a href="15-media-queries.html" target="_blank">15. Media Queries</a></li>
+                <li><a href="16-challenge-responsive.html" target="_blank">16. Challenge Responsive</a></li>
                 <li><a href="17-steps.html">17. Steps</a></li>
                 <li><a href="18-parallax.html">18. Parallax</a></li>
+                <li><a href="19-flexbox.html">19.Flexbox</a></li>
+                <li><a href="20-grids.html" target="_blank">20. Grid</a></li>
             </menu>
         </main>
     </body>
