--- a/08-javascript/index.html
+++ b/08-javascript/index.html
@@ -18,6 +18,9 @@
                 <li><a href="02-comments.html">02. Comments</a></li>
                 <li><a href="03-get-elements.html">03. Get Element</a></li>
                 <li><a href="04-variables.html">04. Variables</a></li>
+                <li><a href="05-methods-object.html">05. Access Object Methods</a></li>
+                <li><a href="06-types-objects.html">06. Objects Types</a></li>
+                <li><a href="07-vehicle-object.html">07. Object Vehicle</a></li>
             </nav>
         </section>
     </main>
