--- a/08-javascript/index.html
+++ b/08-javascript/index.html
@@ -21,6 +21,9 @@
                 <li><a href="05-methods-object.html">05. Access Object Methods</a></li>
                 <li><a href="06-types-objects.html">06. Objects Types</a></li>
                 <li><a href="07-vehicle-object.html">07. Object Vehicle</a></li>
+                <li><a href="08-functions.html">08. Functions</a></li>
+                <li><a href="09-challenge-calculator.html">09. Challenge Calculator</a></li>
+                <li><a href="10-operators-arithmetic.html">10. Operators Arithmetic</a></li>
             </nav>
         </section>
     </main>
