Operators: assingment, comparison, logical and Conditionals.

--- a/08-javascript/index.html
+++ b/08-javascript/index.html
@@ -24,6 +24,11 @@
                 <li><a href="08-functions.html">08. Functions</a></li>
                 <li><a href="09-challenge-calculator.html">09. Challenge Calculator</a></li>
                 <li><a href="10-operators-arithmetic.html">10. Operators Arithmetic</a></li>
+                <li><a href="11-operators-assignment.html">11. Operators Assignment</a></li>
+                <li><a href="12-operators-comparison.html">12. Operators Comparison</a></li>
+                <li><a href="13-operators-logical.html">13. Operators Logical</a></li>
+                <li><a href="14-conditionals.html">14. Conditionals</a></li>
+                <li><a href="15-challenge-conditionals.html">15. Challenge Conditional</a></li>
             </nav>
         </section>
     </main>
