--- a/08-javascript/index.html
+++ b/08-javascript/index.html
@@ -29,6 +29,9 @@
                 <li><a href="13-operators-logical.html">13. Operators Logical</a></li>
                 <li><a href="14-conditionals.html">14. Conditionals</a></li>
                 <li><a href="15-challenge-conditionals.html">15. Challenge Conditional</a></li>
+                <li><a href="16-loops.html">16. Loops</a></li>
+
+                
             </nav>
         </section>
     </main>
