--- a/08-javascript/index.html
+++ b/08-javascript/index.html
@@ -30,7 +30,11 @@
                 <li><a href="14-conditionals.html">14. Conditionals</a></li>
                 <li><a href="15-challenge-conditionals.html">15. Challenge Conditional</a></li>
                 <li><a href="16-loops.html">16. Loops</a></li>
-
+                <li><a href="17-pokedex-api.html">17. Pokedex API</a></li>
+                <li><a href="18-events.html">18. Events</a></li>
+                <li><a href="19-methods-strings.html">19. Methods String</a></li>
+                <li><a href="20-methods-numbers.html">20. Methods Numbers</a></li>
+                <li><a href="21-methods-mathematics.html">21. Methods Mathematics</a></li>
                 
             </nav>
         </section>
