--- a/08-javascript/00-blank.html
+++ b/08-javascript/00-blank.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
     <link rel="stylesheet" href="css/styles.css">
+    <style>
+        
+    </style>
 </head>
 <body>
     <main>
