--- a/08-javascript/index.html
+++ b/08-javascript/index.html
@@ -35,6 +35,7 @@
                 <li><a href="19-methods-strings.html">19. Methods String</a></li>
                 <li><a href="20-methods-numbers.html">20. Methods Numbers</a></li>
                 <li><a href="21-methods-mathematics.html">21. Methods Mathematics</a></li>
+                <li><a href="22-challenge-baloto.html">22. Challenge Baloto</a></li>
                 
             </nav>
         </section>
