--- a/08-javascript/index.html
+++ b/08-javascript/index.html
@@ -36,6 +36,12 @@
                 <li><a href="20-methods-numbers.html">20. Methods Numbers</a></li>
                 <li><a href="21-methods-mathematics.html">21. Methods Mathematics</a></li>
                 <li><a href="22-challenge-baloto.html">22. Challenge Baloto</a></li>
+                <li><a href="23-methods-dates.html">23. Methods Dates</a></li>
+                <li><a href="24-methods-arrays.html">24. Methods Arrays</a></li>
+                <li><a href="25-challenge-arrays.html">25. Challenge Arrays</a></li>
+                <li><a href="26-events-time.html">26. Events Time</a></li>
+                <li><a href="27-challenge-events-time.html">27. Challenge Time Events</a></li>
+                <li><a href="28-pop-up-windows.html">28. Pop Up Windows</a></li>
                 
             </nav>
         </section>
