--- a/10-jQuery/index.html
+++ b/10-jQuery/index.html
@@ -17,6 +17,11 @@
                 <li><a href="01-install.html">01. Install</a></li>                            
                 <li><a href="02-ready.html">02. Ready</a></li> 
                 <li><a href="03-todolist.html">03. Tool List</a></li> 
+                <li><a href="04-selectors.html">04. Selectors</a></li> 
+                <li><a href="05-events.html">05. Events</a></li> 
+                <li><a href="06-effects.html">06. Effects</a></li>        
+                <li><a href="07-callback.html">07. Callback</a></li>        
+                <li><a href="08-chaining.html">08. Chaining</a></li>     
             </nav>
         </section>
     </main>
