--- a/10-jQuery/index.html
+++ b/10-jQuery/index.html
@@ -22,6 +22,8 @@
                 <li><a href="06-effects.html">06. Effects</a></li>        
                 <li><a href="07-callback.html">07. Callback</a></li>        
                 <li><a href="08-chaining.html">08. Chaining</a></li>     
+                <li><a href="08-chaining.html">08. Chaining</a></li>   
+                <li><a href="12-challenge-memory-game.html">12. Challenge Memory Game</a></li>   
             </nav>
         </section>
     </main>
