--- a/10-jQuery/12-challenge-memory-game.html
+++ b/10-jQuery/12-challenge-memory-game.html
@@ -11,13 +11,13 @@
     <link rel="stylesheet" href="css/styles.css">
     <style>
         figure.base {
-            background: url(/10-jQuery/images/MemoryGame/base.png) no-repeat center;
+            background: url(images/MemoryGame/base.png) no-repeat center;
             height: 765px;
             margin: 0 auto;
             width: 911px;
         }
         div.time {
-            background: url(/10-jQuery/images/MemoryGame/timer.png) no-repeat center;
+            background: url(images/MemoryGame/timer.png) no-repeat center;
             color:#fff;
             height: 57px;
             line-height: 53px;
@@ -28,7 +28,7 @@
             width: 123px;
         }
         div.move {
-            background: url(/10-jQuery/images/MemoryGame/move.png) no-repeat center;
+            background: url(images/MemoryGame/move.png) no-repeat center;
             color:#fff;
             height: 57px;
             line-height: 53px;
@@ -68,25 +68,25 @@
             transform: rotateY(180deg);
         }
         div.card-face-front {
-            background: transparent url(/10-jQuery/images/MemoryGame/hide.png) no-repeat center;
+            background: transparent url(images/MemoryGame/hide.png) no-repeat center;
         }
         div.card01 div.card-face-back {
-            background: transparent url(/10-jQuery/images/MemoryGame/card1.png) no-repeat center;
+            background: transparent url(images/MemoryGame/card1.png) no-repeat center;
         }
         div.card02 div.card-face-back {
-            background: transparent url(/10-jQuery/images/MemoryGame/card2.png) no-repeat center;
+            background: transparent url(images/MemoryGame/card2.png) no-repeat center;
         }
         div.card03 div.card-face-back {
-            background: transparent url(/10-jQuery/images/MemoryGame/card3.png) no-repeat center;
+            background: transparent url(images/MemoryGame/card3.png) no-repeat center;
         }
         div.card04 div.card-face-back {
-            background: transparent url(/10-jQuery/images/MemoryGame/card4.png) no-repeat center;
+            background: transparent url(images/MemoryGame/card4.png) no-repeat center;
         }
         div.card05 div.card-face-back {
-            background: transparent url(/10-jQuery/images/MemoryGame/card5.png) no-repeat center;
+            background: transparent url(images/MemoryGame/card5.png) no-repeat center;
         }
         div.card06 div.card-face-back {
-            background: transparent url(/10-jQuery/images/MemoryGame/card6.png) no-repeat center;
+            background: transparent url(images/MemoryGame/card6.png) no-repeat center;
         }
         div.modal{
             background-color: #000c;
