--- a/11-bootstrap/index.html
+++ b/11-bootstrap/index.html
@@ -35,15 +35,15 @@
 
                 <h3 class="text-center text-primary mt-4">02 - Content</h3>
                 <div class="btn-group-vertical d-flex mx-5 ">
-                    <a href="#" class="text-start btn btn-lg btn-outline-dark">
+                    <a href="03-typography.html" class="text-start btn btn-lg btn-outline-dark">
                         <i class="fa fa-file-code"> </i>
                         03 - Typography
                     </a>
-                    <a href="#" class="text-start btn btn-lg btn-outline-dark">
+                    <a href="04-images.html" class="text-start btn btn-lg btn-outline-dark">
                         <i class="fa fa-file-code"> </i>
                         04 - Images
                     </a>
-                    <a href="#" class="text-start btn btn-lg btn-outline-dark">
+                    <a href="05-tables.html" class="text-start btn btn-lg btn-outline-dark">
                         <i class="fa fa-file-code"> </i>
                         05 - Tables
                     </a>
